--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -2226,9 +2226,8 @@
   },
   {
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-17T12:55:50.138956Z",
-     "start_time": "2025-09-17T12:55:49.076088Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "cell_type": "code",
@@ -2254,30 +2253,8 @@
     "pool.shutdown()"
    ],
    "id": "ebd5a2eb0b6be996",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$60.20\n",
-      "$60.20\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defined \u001B[32mclass\u001B[39m \u001B[36mMutableCashTS\u001B[39m\n",
-       "\u001B[36mshared\u001B[39m: \u001B[32mMutableCashTS\u001B[39m = $60.20\n",
-       "\u001B[36mlatch\u001B[39m: \u001B[32mCountDownLatch\u001B[39m = java.util.concurrent.CountDownLatch@63df2017[Count = 0]\n",
-       "\u001B[36mpool\u001B[39m: \u001B[32mExecutorService\u001B[39m = java.util.concurrent.ThreadPoolExecutor@5b3f3e31[Terminated, pool size = 0, active threads = 0, queued tasks = 0, completed tasks = 2]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 9
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
